2048/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: app-2048
  name: ingress-2048
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/private-key-algorithm: "ECDSA"
    cert-manager.io/private-key-size: "384"
spec:
  rules:
    - host: app-2048.idp-poc.dev.enefit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-2048
                port:
                  number: 80
  tls:
    - hosts:
        - app-2048.idp-poc.dev.enefit.com
      secretName: app-2048-tls
